--- a/.gitignore
+++ b/.gitignore
@@ -13,8 +13,11 @@ build/
 *.csv
 
 
-# github folder 
-.github/
+# github specific ignores
+.github/agents
+.github/copilot-instructions.md
+.claude
+
 
 # Agent documentation
 CLAUDE.md
